# py-doc

./: .gitignore  pyproject.toml
anytable_demo/: main.py
common/: doc_chunk.py  doc_chunk_test.py  document_chunk.py  document_chunk_test.py  utils.py
docling_demo/: main.py
example/: all_to_pdf.py
faiss_demo/: app.py  demo.py  document_processor.py  faiss_index.py  metadata_ollama.pkl  routers.py
faiss_demo/api/: routers.py
pdf/: all_to_pdf.py
pdf/docling_demo/: main.py
pdf/pdf_chunk/: pdf_chunk_test.py
pdf/pymupdf_demo/: content_extract.py  cut_pdf.py  highlight.py  mark_location_highlight.py  ocr_demo.py  pdf_highlight.py
pdf/screenshot_demo/: main_anytable.py  main_docling.py  main_docling_v2.py  main_pymupdf.py  main_tt.py
pdf/table_transformer_demo/: locate_table.py  main_pdf.py  structure_recognition.py  utils.py
pymupdf_demo/: mark_location.py  mark_location_highlight.py  ocr_demo.py
screenshot_demo/: main.py  main_docling.py  main_docling_v2.py  main_pymupdf.py  main_tt.py
table_transformer_demo/: locate_table.py  main_pdf.py  structure_recognition.py
word/: docx_chunk.py  mark_location.py
word/docx_demo/: add_comment.py  add_highlight.py  commit_highlight.py  common.py  content_extract.py  docx_content_extraction.py  highlight.py  mark_location.py  new_commit_highlight.py  output.md  parse_document_demo.py  t_paragraphs.py  t_tables.py
